fix appearance of posts on mobile

--- a/assets/styles/elements.css
+++ b/assets/styles/elements.css
@@ -184,16 +184,6 @@
   font-weight: var(--bold);
 }
 
-/* Frame
-******************/
-.frame {
-  display: flex;
-  margin: 1em 0 2.5em 0;
-  padding: 2.778% 0;
-  overflow-x: auto;
-}
-
-
 /* Loading
 ******************/
 .loading {
